<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/svAddActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.meeting_list.AddMeetingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfObject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:hint="@string/tfObject_text"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_filter_center_focus_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfObjectInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ivLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_baseline_location_on_24"
            app:layout_constraintBottom_toBottomOf="@+id/tvSelectRoom"
            app:layout_constraintEnd_toStartOf="@+id/tvSelectRoom"
            app:layout_constraintTop_toTopOf="@+id/tvSelectRoom"
            app:tint="#757575"
            android:contentDescription="@string/ivLocation_content_description" />

        <TextView
            android:id="@+id/tvSelectRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/tvSelectRoom_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tfObject"
            app:layout_constraintStart_toStartOf="@+id/tfObject"
            app:layout_constraintTop_toBottomOf="@+id/tfObject" />

        <Spinner
            android:id="@+id/sMeetingRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSelectRoom" />

        <ImageView
            android:id="@+id/ivCalendarIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_baseline_agenda_24"
            app:layout_constraintBottom_toBottomOf="@+id/tvMeetingDate"
            app:layout_constraintEnd_toStartOf="@+id/tvMeetingDate"
            app:layout_constraintTop_toTopOf="@+id/tvMeetingDate"
            app:tint="#757575"
            android:contentDescription="@string/ivCalendarIcon_content_description" />

        <TextView
            android:id="@+id/tvMeetingDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/tvMeetingDate_text"
            android:textColor="#757575"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sMeetingRoom" />

        <TextView
            android:id="@+id/tvSelectedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tvSelectedDate_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tvMeetingDate"
            app:layout_constraintStart_toStartOf="@+id/tvMeetingDate"
            app:layout_constraintTop_toBottomOf="@+id/tvMeetingDate" />

        <ImageView
            android:id="@+id/ivTimeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_baseline_access_time_24"
            app:layout_constraintBottom_toBottomOf="@+id/tvMeetingHourStart"
            app:layout_constraintEnd_toStartOf="@+id/tvMeetingHourStart"
            app:layout_constraintTop_toTopOf="@+id/tvMeetingHourStart"
            app:tint="#757575"
            android:contentDescription="@string/ivTimeIcon_content_description" />

        <TextView
            android:id="@+id/tvMeetingHourStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/tvMeetingHourStart_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSelectedDate" />

        <TextView
            android:id="@+id/tvSelectedHourStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tvSelectedHourStart_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tvMeetingHourStart"
            app:layout_constraintStart_toStartOf="@+id/tvMeetingHourStart"
            app:layout_constraintTop_toBottomOf="@+id/tvMeetingHourStart" />

        <TextView
            android:id="@+id/tvMeetingDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/tvMeetingDuration_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSelectedHourStart" />

        <Spinner
            android:id="@+id/sDurationMeeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_duration"
            app:layout_constraintStart_toStartOf="@+id/tvMeetingDuration"
            app:layout_constraintTop_toBottomOf="@+id/tvMeetingDuration" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_duration_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/sDurationMeeting"
            app:layout_constraintEnd_toEndOf="@+id/tvMeetingDuration"
            app:layout_constraintTop_toTopOf="@+id/sDurationMeeting" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfParticipants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:hint="@string/tfParticipants_text"
            android:textSize="20sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sDurationMeeting"
            app:startIconDrawable="@drawable/ic_baseline_alternate_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfParticipantsInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbAddMailButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:enabled="false"
            android:text="@string/mbAddMailButton_text"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tfParticipants" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mbAddMailButton" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbCreate"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:enabled="false"
            android:text="@string/mbCreate_text"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cg_mail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>