<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/filter"
        android:title="Filter"
        android:icon="@drawable/ic_baseline_filter_list_24"
        app:showAsAction="ifRoom|collapseActionView">
        <menu>
            <item
                android:id="@+id/meetingNameFilter"
                android:title="Location Filter"
                android:icon="@drawable/ic_baseline_search_24"
                app:showAsAction="ifRoom|collapseActionView"
                app:actionViewClass="androidx.appcompat.widget.SearchView" />
            <item
                android:id="@+id/meetingDateFilter"
                android:title="Date Filter"
                android:icon="@drawable/ic_baseline_sort_24"
                app:showAsAction="never"/>
            <item
                android:id="@+id/reseteDateFilter"
                android:title="Reset Filter"
                android:icon="@drawable/ic_baseline_sort_24"
                app:showAsAction="never"/>
        </menu>
    </item>

    </menu>
