...
        android:layout_marginStart="12dp"
        android:maxLines="1"
        android:text="@string/tv_meetingDate_text"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_meeting"
        app:layout_constraintStart_toEndOf="@id/item_list_color_circle" />

    <TextView
        android:id="@+id/tv_meeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
